# qveris-agent-toolkit

./: .editorconfig  .env.exmaple  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_zh-CN.md  RELEASING.md  SECURITY.md  SETUP.md  billing-transparency-agent-update-plan.md  glama.json  llms-full.txt  llms.txt  package.json  pyproject.toml  smithery.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cli-publish.yml  codex-auto-review-approve.yml  contract-tests.yml  docs-check.yml  ecosystem-validate.yml  js-sdk-publish.yml  mcp-publish.yml  openapi-contract.yml  openapi-types.yml  python-sdk-publish.yml  qveris-plugin-publish.yml  release-tools.yml  sync-docs-to-website.yml
agent/: GUIDELINES.md  SETUP.md  llms-full.txt  llms.txt
benchmarks/discover-call/: .gitignore  PUBLICATION_POLICY.md  README.md  package-lock.json  (+2 more)
docs/: ide-cli-setup.md  opencode-setup.md  rest-api.md  troubleshooting.md
ecosystem/: README.md  compatibility.md
examples/: stock_debate.py
qveris/: config.py  types.py
recipes/: README.md
scripts/: check-doc-locales.mjs  plan-contract-tests.mjs  plan-contract-tests.test.mjs  prepare-website-docs.mjs  prepare-website-docs.test.mjs  regenerate-openapi-artifacts.sh  release-client-packages.mjs  release-client-packages.test.mjs  test-ecosystem-validator.mjs  test-openapi-contract.mjs  validate-openapi-contract.mjs
(+107 files in other folders)
